syntax = "proto3";
package order;
option go_package = "github.com/yourproject/services/order/gen";

import "product.proto";

service OrderService {
  rpc CreateOrder(OrderRequest) returns (OrderResponse);
  rpc GetOrder(OrderID) returns (OrderResponse);
  rpc UpdateOrderStatus(OrderStatusUpdate) returns (OrderResponse);
}

message OrderRequest {
  string user_id = 1;
  repeated string product_ids = 2;
}

message OrderID {
  string id = 1;
}

message OrderStatusUpdate {
  string order_id = 1;
  OrderStatus status = 2;
}

enum OrderStatus {
  PENDING = 0;
  PROCESSING = 1;
  COMPLETED = 2;
  CANCELLED = 3;
}

message OrderResponse {
  string id = 1;
  string user_id = 2;
  repeated product.ProductResponse items = 3;
  double total = 4;
  OrderStatus status = 5;
  Timestamp created_at = 6;
  BaseResponse base = 7;
}

// common
message BaseResponse {
  int32 code = 1;
  string message = 2;
}

message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}

message Empty {}
// common